# monitoria-classcontent-cli

./: .gitignore  .monitoria.example.yml  README.md  install.sh  pyproject.toml
src/monitoria/: __init__.py  __main__.py  analyzer.py  auth.py  cli.py  config.py  sync.py  tui.py  validate.py  watcher.py
templates/intellij/: MonitorIA.xml  README.md
test-project/: pom.xml
test-project/src/main/java/com/example/: App.java  HomeController.java  UserService.java
teste-aluno-monitoria/: index.html  package.json
teste-aluno-monitoria/src/: App.tsx  index.css  types.ts
teste-aluno-monitoria/src/components/: TodoItem.tsx  TodoList.tsx
tests/: test_watcher.py
