[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoria-classcontent"
version = "0.1.0"
description = "MonitorIA — Coding monitor em tempo real para ClassContent.digital"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ClassContent.digital"},
]
keywords = ["classcontent", "monitoria", "lms", "education", "code-review", "live-feedback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development",
]
dependencies = [
    "watchdog>=4.0",
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://classcontent.digital"
Repository = "https://github.com/kelsonvictr/monitoria-classcontent-cli"
Issues = "https://github.com/kelsonvictr/monitoria-classcontent-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
monitoria = "monitoria.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
